tdf#159666 Crash when table and line object are selected at the same time

before
    commit e3077168072452fb8f1c0a8afb2992877cb96d1c
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jun 17 09:49:37 2021 +0200
    loplugin:finalclasses
the cast in
   const SdrEdgeObj* pEdge = static_cast<SdrEdgeObj*>(m_pObj);
would incorrectly cast a SdrTableObj, but it happened to do nothing
problematic.

After the above commit, the vtable layout changed and it started
crashing.

Work around it by use dynamic_cast and ignoring objects that are not
SdrEdgeObj.

Change-Id: Ibe03d4935b8eeb182e037b1648d841e26fa23ed4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163242
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>